plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'nu.studer.jooq' version '8.2' // Jooq Gradle 플러그인 추가
}

group = 'com.meong9'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Jooq
	implementation 'org.jooq:jooq:3.18.0'
	implementation 'org.jooq:jooq-meta:3.18.0'
	implementation 'org.jooq:jooq-codegen:3.18.0'
	jooqGenerator 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-jooq'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JWT
	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Mahout & Mahout Integration (JDBC Support)
	implementation group: 'org.apache.mahout', name: 'mahout-mr', version: '0.13.0'
	implementation group: 'org.apache.mahout', name: 'mahout-math', version: '0.13.0'
	implementation 'org.apache.mahout:mahout-integration:0.13.0'

	// Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.batch:spring-batch-core:5.1.0'

	// webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

jooq {
	version = '3.18.0' // Jooq 버전
	configurations {
		main { // "main"이라는 기본 설정
			generationTool {
				jdbc {
					driver = 'com.mysql.cj.jdbc.Driver'
					url = System.getProperty('dbUrl', 'jdbc:mysql://localhost:3306/meong9')
					user = System.getProperty('dbUsername', 'root')
					password = System.getProperty('dbPassword', '1234')
				}
				generator {
					database {
						name = 'org.jooq.meta.mysql.MySQLDatabase'
						inputSchema = 'meong9'
						includes = '.*'
					}
					target {
						packageName = 'com.meong9.backend.jooq.generated' // 생성된 코드를 저장할 패키지
						directory = "$buildDir/generated/jooq" // 생성된 코드 저장 위치
					}
				}
			}
		}
	}
}

sourceSets {
	main {
		java {
			srcDirs "$buildDir/generated/jooq" // 생성된 Jooq 코드를 소스 경로에 추가
		}
	}
}
